[PostController] Mise à jour des fonctions create et update / [Post & Category] Refactor des liens ManyToMany / [Twig Admin] Changements sur des templates / [DataBase] Mise à jour de la BDD

--- a/templates/admin/post/create.html.twig
+++ b/templates/admin/post/create.html.twig
@@ -3,5 +3,13 @@
 {% block title %}Hello PostController!{% endblock %}
 
 {% block body %}
-    {{ form(formView) }}
+    {{ form_start(formView) }}
+
+    <h3>Catégories</h3>
+    <ul class="tags">
+        {% for category in formView.categories %}
+            <li>{{ form_row(category.name) }}</li>
+        {% endfor %}
+    </ul>
+{{ form_end(formView) }}
 {% endblock %}
