--- a/templates/admin/post/show.html.twig
+++ b/templates/admin/post/show.html.twig
@@ -18,6 +18,11 @@
     {% else %}
         Aucune
     {% endif %}
+    <br>
+    Catégories :
+    {% for category in post.categories %}
+        {{category.name}}
+    {% endfor %}
 
 
 </div>
