--- a/templates/admin/base.admin.html.twig
+++ b/templates/admin/base.admin.html.twig
@@ -16,11 +16,21 @@
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="http://symfony.iut/admin/post/list">Posts</a>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Posts
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="http://symfony.iut/admin/post/list">Liste des posts</a>
+                    <a class="dropdown-item" href="http://symfony.iut/admin/post/create">Ajouter un post</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="http://symfony.iut/admin/category">Catégories</a>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Catégories
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="http://symfony.iut/admin/category">Liste des catégories</a>
+                    <a class="dropdown-item" href="http://symfony.iut/admin/category/create">Ajouter une catégorie</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="http://symfony.iut/admin/comment">Commentaires</a>
