--- a/templates/admin/base.admin.html.twig
+++ b/templates/admin/base.admin.html.twig
@@ -29,11 +29,11 @@
                     Catégories
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="http://symfony.iut/admin/category">Liste des catégories</a>
+                    <a class="dropdown-item" href="http://symfony.iut/admin/category/list">Liste des catégories</a>
                     <a class="dropdown-item" href="http://symfony.iut/admin/category/create">Ajouter une catégorie</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="http://symfony.iut/admin/comment">Commentaires</a>
+                    <a class="nav-link" href="http://symfony.iut/admin/comment/list">Commentaires</a>
                 </li>
                 </ul>
             </div>
