--- a/templates/admin/post/list.html.twig
+++ b/templates/admin/post/list.html.twig
@@ -3,36 +3,25 @@
 {% block title %}Liste des posts{% endblock %}
 
 {% block body %}
-        
-    <h1 class="text-center">Liste des posts</h1>
-    <br>
-    {% for post in posts %}
-        Titre :
-        {{ post.title}}
-        <br>
-        Description :
-        {{post.description}}
-        <br>
-        Contenu :
-        {{post.content}}
-        <br>
-        <br>
-        Crée le :
-        {{post.createdAt|date("d/m/Y")}} à {{post.createdAt|date("H:i")}}
-        <br>
-        Publié le :
-        {{post.publishedAt|date("d/m/Y")}} à {{post.publishedAt|date("H:i")}}
-        <br>
-        Mis à jour le :
-        {{post.updatedAt|date("d/m/Y")}} à {{post.updatedAt|date("H:i")}}
-        <br>
 
-        <br>
-        <a href="http://symfony.iut/admin/post/{{post.slug}}/edit">Modifier le post</a>
-        <a href="http://symfony.iut/admin/post/{{post.id}}/remove">Supprimer le post</a>
-        <br>
-        <br>
-    {% endfor %}
-    <br>
-    <a href="http://symfony.iut/admin/post/create">Ajouter un nouveau post</a>
+	<h1 class="text-center mt-4">Liste des posts</h1>
+	<br>
+    <div class="container text-center">
+        <div class="row row-cols-3">
+        {% for post in posts %}
+            <div class="col mb-3">
+                <div class="card w-100 mt-3">
+                <div class="card-body">
+                    <h5 class="card-title">{{ post.title }}</h5>
+                    <p class="card-text">{{ post.description }}</p>
+                    <a href="http://symfony.iut/admin/post/{{ post.slug }}" class="btn btn-secondary btn-outline-warning">Afficher le post</a>
+                </div>
+                <div class="card-footer">
+                    <small class="text-muted">Crée le {{ post.createdAt|date("d/m/Y")}} à {{ post.createdAt|date("H:i")}}</small>
+                </div>
+                </div>
+            </div>
+        {% endfor %}
+        </div>
+    </div>
 {% endblock %}
