--- a/templates/user/base.html.twig
+++ b/templates/user/base.html.twig
@@ -9,14 +9,14 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="http://symfony.iut/post">BlogyBlog</a>
+            <a class="navbar-brand" href="http://symfony.iut/post">BloggyBlog</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="http://symfony.iut/admin/post">Admin</a>
+                    <a class="nav-link" href="http://symfony.iut/admin">Admin</a>
                 </li>
                 </ul>
             </div>
