[Category Admin] Front-end ajout category, edit category, visualisation d'une category, liste category

--- a/templates/admin/category/create.html.twig
+++ b/templates/admin/category/create.html.twig
@@ -3,9 +3,9 @@
 {% block title %}Ajouter une catégorie{% endblock %}
 
 {% block body %}
-    <h1 class="text-center">Ajouter une catégorie</h1>
+    <h1 class="text-center mt-4">Ajouter une catégorie</h1>
     <br>
-    <div class="container">
+    <div class="container w-50">
         <form name="category" method="post">
             <div id="category"
                 {{ form_row(formView.name) }}
