--- a/templates/admin/category/edit.html.twig
+++ b/templates/admin/category/edit.html.twig
@@ -1,7 +1,19 @@
 {% extends 'admin/base.admin.html.twig' %}
 
-{% block title %}Hello PostController!{% endblock %}
+{% block title %}Edit une catégorie{% endblock %}
 
 {% block body %}
-    {{ form(formView) }}
+     <h1 class="text-center mt-4">Editer une catégorie</h1>
+    <br>
+    <div class="container w-50">
+        <form name="category" method="post">
+            <div id="category"
+                {{ form_row(formView.name) }}
+                 <div class="form-group">
+                    <button type="submit" id="category_Valider" name="category[Valider]" class="btn btn-secondary btn-outline-warning btn-block w-50 mx-auto">Valider</button>
+                </div>
+                <input type="hidden" id="category__token" name="category[_token]" value="t5b055TE2R4fLUsY_O04n_nFmcDZH5zyWHssLYbs9h4" />
+            </div>
+        </form>
+    </div>
 {% endblock %}
