--- a/templates/admin/category/index.html.twig
+++ b/templates/admin/category/index.html.twig
@@ -3,17 +3,20 @@
 {% block title %}Liste des catégories{% endblock %}
 
 {% block body %}
-    <h1 class="text-center">Liste des catégories</h1>
-    <br>
-    {% for category in categories %}
-        {{ category.id}}
-        <br>
-        {{category.name}}
-        <br>
-        <a href="http://symfony.iut/admin/category/{{category.id}}/edit">Modifier la catégorie</a>
-        <a href="http://symfony.iut/admin/category/{{category.id}}/remove">Supprimer la Catégorie</a>
-        <br>
-        <br>
-    {% endfor %}
-    <a href="http://symfony.iut/admin/category/create">Ajouter une nouvelle catégorie</a>
+    <h1 class="text-center mt-4">Liste des catégories</h1>
+	<br>
+    <div class="container text-center">
+        <div class="row row-cols-3">
+        {% for category in categories %}
+            <div class="col mb-3">
+                <div class="card w-100 mt-3">
+                <div class="card-body">
+                    <h5 class="card-title">{{ category.name }}</h5>
+                    <a href="http://symfony.iut/admin/category/{{ category.id }}" class="btn btn-secondary btn-outline-warning">Afficher la catégorie</a>
+                </div>
+                </div>
+            </div>
+        {% endfor %}
+        </div>
+    </div>
 {% endblock %}
