--- a/templates/admin/post/show.html.twig
+++ b/templates/admin/post/show.html.twig
@@ -42,8 +42,8 @@
                             <h4 class="">{{ comment.username }}</h4>
                             <br>
                             <p class="lead">{{ comment.content }}</p>
-                            <hr class="my-4">
-                            <small class="text-muted" style="font-size:40%">Le {{ comment.createdAt|date("d/m/Y à H:i") }}</small>
+                            <hr class="mt-4">
+                            <small class="text-muted align-middle" style="font-size:40%">Le {{ comment.createdAt|date("d/m/Y à H:i") }}</small>
                         </div>
                     </div>
                 {% endif %}
