--- a/templates/admin/post/list.html.twig
+++ b/templates/admin/post/list.html.twig
@@ -14,7 +14,7 @@
                 <div class="card-body">
                     <h5 class="card-title">{{ post.title }}</h5>
                     <p class="card-text">{{ post.description }}</p>
-                    <a href="http://symfony.iut/admin/post/{{ post.slug }}" class="btn btn-secondary btn-outline-warning">Afficher le post</a>
+                    <a href="http://symfony.iut/admin/post/{{ post.slug }}" class="btn btn-info">Afficher le post</a>
                 </div>
                 <div class="card-footer">
                     <small class="text-muted">Crée le {{ post.createdAt|date("d/m/Y")}} à {{ post.createdAt|date("H:i")}}</small>
