--- a/templates/admin/category/index.html.twig
+++ b/templates/admin/category/index.html.twig
@@ -12,7 +12,7 @@
                 <div class="card w-100 mt-3">
                 <div class="card-body">
                     <h5 class="card-title">{{ category.name }}</h5>
-                    <a href="http://symfony.iut/admin/category/{{ category.id }}" class="btn btn-secondary btn-outline-warning">Afficher la catégorie</a>
+                    <a href="http://symfony.iut/admin/category/{{ category.id }}" class="btn btn-info">Afficher la catégorie</a>
                 </div>
                 </div>
             </div>
