--- a/templates/user/base.html.twig
+++ b/templates/user/base.html.twig
@@ -21,7 +21,10 @@
                 </ul>
             </div>
         </nav>
-        {% block body %}{% endblock %}
+        
+        {% block body %}
+        {% endblock %}
+
         {% block javascripts %}
             {{ encore_entry_script_tags('app') }}
         {% endblock %}
