--- a/templates/user/post/show.html.twig
+++ b/templates/user/post/show.html.twig
@@ -3,41 +3,51 @@
 {% block title %}Hello PostController!{% endblock %}
 
 {% block body %}
-<div class="text-center" style="padding-top : 2%">
-    <h1>Visualisation du post</h1>
+<h1 class="text-center mt-4 mb-5">Visualisation du post</h1>
     <br>
-    Id du post : {{post.id}}
-    <br>
-    Titre du post : {{post.title}}
-    <br>
-    Contenu du post : {{post.content}}
-    <br>
-    <br>
-    Créé le : {{post.createdAt|date("d/m/Y")}} à {{post.createdAt|date("H:i")}}
-    <br>
-    Publié le : 
-    {{post.publishedAt|date("d/m/Y")}} à {{post.publishedAt|date("H:i")}}
-    <br>
-    Mis à jour le :
-    {{post.updatedAt|date("d/m/Y")}} à {{post.updatedAt|date("H:i")}}
-    <br>
-    <br>
-    <a href="http://symfony.iut/comment/create/{{post.id}}">Laisser un commentaire</a>
-    <br>
-    <br>
-    <div style="text-align:left">
-        <h2>Commentaires :<h2>
-        <br>
-        {% for comment in comments %}
-            {% if comment.valid %}
-                <h4>{{ comment.username}}</h4>
-                <br>
-                {{comment.content}}
-                <br>
-                <br>
-            {% endif %}
-        {% endfor %}
+    <div class="container">
+        <div class="card text-center w-75 mx-auto">
+        <div class="card-body">
+            <h5 class="card-title">{{ post.title }}</h5>
+            <hr>
+            <p class="card-text font-italic">{{ post.description | nl2br }}</p>
+            <hr>
+            <p class="card-text">{{ post.content | nl2br }}</p>
+            <hr>
+            <p>Catégories :
+            {% for category in post.categories %}
+                    <a href="http://symfony.iut/category/{{ category.id }}" class="mx-1">{{ category.name }}</a>
+            {% endfor %}
+            </p>
+            <hr>
+            <a href="http://symfony.iut/comment/create/{{ post.id }}" class="btn btn-info mx-2">Laisser un commentaire</a>
+        </div>
+        <div class="card-footer">
+            <small class="text-muted">Publié le : {{ post.publishedAt|date("d/m/Y")}} à {{ post.publishedAt|date("H:i")}}</small>
+            <br>
+            <small class="text-muted">Dernière mise à jour : {{ post.updatedAt|date("d/m/Y")}} à {{ post.updatedAt|date("H:i")}}</small>
+        </div>
+        </div>
     </div>
-
-</div>
+    <br>
+    <br>
+    <h2 class="text-left ml-4">Commentaires :<h2>
+    <br>
+    <div class="mx-4">
+        <div class="row row-cols-4">
+            {% for comment in comments %}
+                {% if comment.valid %}
+                    <div class="col mb-3">
+                        <div class="jumbotron p-3">
+                            <h4 class="">{{ comment.username }}</h4>
+                            <br>
+                            <p class="lead">{{ comment.content }}</p>
+                            <hr class="mt-4">
+                            <small class="text-muted align-middle" style="font-size:40%">Le {{ comment.createdAt|date("d/m/Y à H:i") }}</small>
+                        </div>
+                    </div>
+                {% endif %}
+            {% endfor %}
+        </div>
+    </div>
 {% endblock %}
