--- a/templates/admin/category/index.html.twig
+++ b/templates/admin/category/index.html.twig
@@ -12,6 +12,7 @@
                 <div class="card w-100 mt-3">
                 <div class="card-body">
                     <h5 class="card-title">{{ category.name }}</h5>
+                    <p class="card-text">Nombre de posts : {{ getNbPosts(category.id) }}</p>
                     <a href="http://symfony.iut/admin/category/{{ category.id }}" class="btn btn-info">Afficher la catégorie</a>
                 </div>
                 </div>
