--- a/templates/admin/post/list.html.twig
+++ b/templates/admin/post/list.html.twig
@@ -14,6 +14,11 @@
                 <div class="card-body">
                     <h5 class="card-title">{{ post.title }}</h5>
                     <p class="card-text">{{ post.description }}</p>
+                    <p class="card-text"> Catégorie(s) :
+                    {% for category in post.categories %}
+                        {{ category.name }}
+                    {% endfor %}
+                    </p>
                     <a href="http://symfony.iut/admin/post/{{ post.slug }}" class="btn btn-info">Afficher le post</a>
                 </div>
                 <div class="card-footer">
