--- a/templates/user/post/index.html.twig
+++ b/templates/user/post/index.html.twig
@@ -13,6 +13,7 @@
                     <div class="card-body">
                         <h5 class="card-title">{{ post.title }}</h5>
                         <p class="card-text font-italic">{{ post.description | nl2br }}</p>
+                        <p class="card-text">{{ post.content | u.truncate(200, '...') }}</p>
                         <a href="http://symfony.iut/post/{{ post.slug }}" class="btn btn-info">Afficher le post</a>
                     </div>
                     <div class="card-footer">
