--- a/templates/user/post/show.html.twig
+++ b/templates/user/post/show.html.twig
@@ -16,7 +16,7 @@
             <hr>
             <p>Catégories :
             {% for category in post.categories %}
-                    <a href="http://symfony.iut/admin/category/{{ category.id }}" class="mx-1">{{ category.name }}</a>
+                    <a href="http://symfony.iut/category/{{ category.id }}/show" class="mx-1">{{ category.name }}</a>
             {% endfor %}
             </p>
             <hr>
